@@ -20,16 +20,11 @@
         <kotest.version>5.7.2</kotest.version>
         <mockk.version>1.13.8</mockk.version>
         <ktor.version>3.0.0</ktor.version>
-        <jicoco.version>1.1-150-g57913c0</jicoco.version>
+        <jicoco.version>1.1-159-gf9c2712</jicoco.version>
         <jitsi.utils.version>1.0-127-g6c65524</jitsi.utils.version>
     </properties>
 
     <dependencies>
-       <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpkix-jdk18on</artifactId>
-            <version>1.75</version>
-        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>jicoco-mucclient</artifactId>
@@ -109,7 +104,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>jitsi-xmpp-extensions</artifactId>
-            <version>1.0-78-g62d03d4</version>
+            <version>1.0-95-ge113e35</version>
         </dependency>
         <dependency>
             <groupId>com.datadoghq</groupId>
@@ -349,6 +344,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                    </argLine>
                     <systemPropertyVariables>
                         <!-- gradle.build.dir is the property name that JunitXmlReporter expects to find, even though
                         this is maven -->
